# voltpy

./: README.md  mkdocs.yml  pyproject.toml
docs/: DISCLAIMER.md  mechanical-analysis.md  requirements.txt
docs/es/: DISCLAIMER.md  index.md  mechanical-analysis.md
docs/es/examples/: sag_tension_basic.md
docs/examples/: sag_tension_basic.md
src/ohmly/: conductor.py  conductor_db  mech.py
src/voltpy/: conductor.py  conductor_db
tests/: test_catenary.py  test_conductor.py  test_mech_analysis.py  test_utils.py
