[project]
name = "voltpy"
version = "0.0.1"
description = "An electrical and mechanical analysis tool of overhead conductors."
authors = [
    {name = "Axel Rodríguez Chang", email = "axelrogg@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]
license = "MIT"

[project.urls]
Homepage = "https://github.com/axelrogg/voltpy"
Issues = "https://github.com/axelrogg/voltpy/issues"

[tool.poetry]
packages = [{include = "voltpy", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
