[project]
name = "ohmly"
version = "0.0.5"
description = "An electrical and mechanical analysis tool of overhead conductors."
authors = [
    {name = "Axel Rodríguez Chang", email = "axelrogg@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tabulate (>=0.9.0,<0.10.0)"
]
license = "MIT"

[project.urls]
Homepage = "https://github.com/axelrogg/ohmly"
Issues = "https://github.com/axelrogg/ohmly/issues"

[tool.poetry]
packages = [{include = "ohmly", from = "src"}]
include = ["src/ohmly/conductor_db"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

